test(catalog): assert mapped page content and command validation rules
- Replace weak page test (verify-only) with content assertion: checks
  mapped DTO name, page size, and total elements
- Add UpdateProductCommand negative-price and zero-price validation cases
- Add CreateProductCommand zero-price boundary case
- Fix AssertJ import to use Assertions (supports list assertions)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>